--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,39 @@
 .read-the-docs {
   color: #888;
 }
+
+.ag-header-cell-label {
+  justify-content: center;
+}
+
+.grid-wrapper{
+  height:100%;
+  width:100%;
+}
+
+.title{
+  display:flex;
+  align-items: center;
+}
+.tooltip{
+  display: flex;
+  width:1rem;
+  height:1rem;
+  margin: 1rem;
+  margin-top: -.5rem;
+  align-items: center;
+  justify-content: center;
+  padding:.25rem;
+  background-color: #2196f3ab;
+  color:black;
+  border-radius: 100%;
+  font-size: .75rem;
+  font-weight: bold;
+  transition: background-color .2s;
+  user-select: none;
+  cursor: pointer;
+}
+
+.tooltip:hover{
+  background-color: #2196f3;
+}
